fix: Strip HTML whitespace to prevent gaps when shortcode is inside 'pre' blocks.

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -4,6 +4,7 @@
     width: 800px;
     margin: 20px auto;
     font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
 }
 
 #gnn-shortner-form {
